--- a/song-manger-web/package.json
+++ b/song-manger-web/package.json
@@ -10,8 +10,11 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
+		"@rgossiaux/svelte-headlessui": "^1.0.2",
 		"@sveltejs/adapter-auto": "^1.0.0",
 		"@sveltejs/kit": "^1.0.0",
+		"@types/fuzzy-search": "^2.1.2",
+		"@types/quill": "^2.0.10",
 		"autoprefixer": "^10.4.13",
 		"postcss": "^8.4.20",
 		"svelte": "^3.54.0",
@@ -21,5 +24,13 @@
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"axios": "^1.2.2",
+		"daisyui": "^2.46.1",
+		"fuzzy-search": "^3.2.1",
+		"quill": "^1.3.7",
+		"short-uuid": "^4.2.2",
+		"tailwind-editor": "^0.2.2"
+	}
 }
