--- a/rest-api/docker-compose.yaml
+++ b/rest-api/docker-compose.yaml
@@ -2,7 +2,35 @@ version: '3'
 
 services:
   mongo:
-    container_name: sinhala-songs-meta-api
-    image: thilinatlm/sinhala-songs-se-rest-api
+    container_name: mongo
+    image: prismagraphql/mongo-single-replica:5.0.3
     ports:
-      - '3000:3000'
+      - '27017:27017'
+      - '28017:28017'
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: root
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.5.3
+    container_name: elasticsearch
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+      nofile:
+        soft: 65536
+        hard: 65536
+    ports:
+      - 9200:9200
+      - 9300:9300
+  kibana:
+    container_name: kibana
+    image: docker.elastic.co/kibana/kibana:8.5.3
+    restart: always
+    environment:
+      - ELASTICSEARCH_HOSTS=http://localhost:9200
+    ports:
+      - 5601:5601
