--- a/rest-api/docker-compose.yaml
+++ b/rest-api/docker-compose.yaml
@@ -1,8 +1,8 @@
 version: '3'
 
 services:
-  mongo:
-    container_name: mongo
+  mongo_db:
+    container_name: songs-db-mongo
     image: prismagraphql/mongo-single-replica:5.0.3
     ports:
       - '27017:27017'
@@ -12,7 +12,7 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: root
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.5.3
-    container_name: elasticsearch
+    container_name: songs-es
     environment:
       - discovery.type=single-node
       - xpack.security.enabled=false
@@ -23,11 +23,9 @@ services:
       nofile:
         soft: 65536
         hard: 65536
-    ports:
-      - 9200:9200
-      - 9300:9300
+    network_mode: host
   kibana:
-    container_name: kibana
+    container_name: songs-kibana
     image: docker.elastic.co/kibana/kibana:8.5.3
     restart: always
     environment:
