--- a/search-app/package.json
+++ b/search-app/package.json
@@ -26,5 +26,9 @@
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "axios": "^1.2.3",
+    "elastic-builder": "^2.17.3"
+  }
 }
